Adjust profile header icon to match size of other icons on the page. Fix issue where 'back' icon was visible

--- a/mobile/scss/modules/profile.scss
+++ b/mobile/scss/modules/profile.scss
@@ -1,3 +1,7 @@
+.button.button-small.button-icon:before {
+  font-size: 26px !important;
+}
+
 .profile-visual{
   position: absolute;
   left: 10px;
